<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:id="@+id/emailAddressEdt_signUp"
            android:focusableInTouchMode="true"
            android:imeOptions="actionUnspecified"
            android:maxLines="1"
            android:singleLine="true"
            android:padding="4dp"
            android:layout_margin="8dp"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:id="@+id/passwordEdt_signUp"
            android:maxLines="1"
            android:singleLine="true"
            android:focusableInTouchMode="true"
            android:imeOptions="actionUnspecified"
            android:padding="4dp"
            android:layout_margin="8dp"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/sign_up_button"
        android:padding="4dp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_margin="8dp"
        android:text="@string/sign_up"/>

    </LinearLayout>

</ScrollView>